# bjs-menu

./: .env.example  .gitignore  GAP_ANALYSIS_VS_TOP_POS.md  TOUCHSALE_GAP_ANALYSIS.md  docker-compose.prod.yml  docker-compose.yml  test_production.py  test_production_results.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  logrotate.conf  pyproject.toml  requirements.txt  run_migration_021.py  seed_test_data.py  test_all_endpoints.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_training_images.py  003_ai_training_enhancements.py  004_add_reconciliation_tables.py  005_add_advanced_features.py  006_add_touchsale_features.py  007_add_subtables.py  008_add_staff_commission_fields.py  009_add_menu_item_base_price.py  010_add_workflow_mode_fields.py  011_hash_user_pin.py  012_add_performance_indexes.py  013_add_composite_indexes.py  014_add_missing_staff_reservations.py  015_add_modifier_groups_combo_meals.py  016_add_missing_tables_and_columns.py  017_fix_remaining_endpoint_errors.py  018_add_advanced_features_tables.py  019_realign_advanced_features_schemas.py  020_stock_reservation_system.py  021_inventory_intelligence_xero.py  022_add_missing_tables.py  (+9 more)
backend/app/: __init__.py  main.py
backend/ml/: DATA_LABELING_GUIDE.md  ML_TRAINING.md  __init__.py
backend/models/: label_map.json
backend/scripts/: batch_train.py  export_yolo_tflite.py
backend/tests/: conftest.py  test_500_fixes.py  test_advanced_features.py  test_advanced_services.py  test_allergen_workflow.py  test_api.py  test_auth.py  test_authorization.py  test_competitor_features.py  test_core_api.py  test_crud.py  test_delivery_service.py  test_demand_forecasting.py  test_financial_services.py  test_gap_features.py  test_haccp_service.py  test_inventory_intelligence.py  test_orders.py  test_orders_reports.py  test_payment_routes.py  test_payroll.py  test_pos_sync_delivery.py  test_purchase_order_flow.py  test_recipes_invoices.py  test_reconciliation.py  test_reservations_marketing.py  test_scheduling_service.py  test_security.py  test_split_bill.py  test_sql_injection.py  test_stock.py
(+988 files in other folders)
